fun Daily UPDATE

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="main-div text-center">
-      <h1 class="main-time mb-4">باقي على شروق الشمس <span>0</span> ساعة</h1>
-      <button class="btn btn-info">قولي باقي قد ايه؟</button>
+      <button class="btn btn-info mb-4">قولي باقي قد ايه؟</button>
+      <h1 class="main-time">باقي على شروق الشمس <br /><span>0</span></h1>
       <div>
         <h2 class="float-right q none">هانت؟</h2>
       </div>
